Added Create For Form

--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
         password: document.getElementById('password').value,
     }
 
-    axios.post('https://payday_api.test/api/v1/projects/e_commerce_app/auth/login?api_key=uNzLCrrBMK8ulWQaJvAvYgw4', formData)
+    axios.post('https://core.hisend.hunnovate.com/api/v1/projects/e_commerce_app/auth/login?api_key=lntX8uGyhVAYkJQTLMHDDXGQ', formData)
       .then(response => {
         // Handle success (e.g., redirect to dashboard)
         alert('Login successful!');
